--- a/dotnet/blazor/game/game/game.Client/Pages/Lobby.razor
+++ b/dotnet/blazor/game/game/game.Client/Pages/Lobby.razor
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.SignalR.Client
+@using entities
 
 @page "/"
 @rendermode @(new InteractiveWebAssemblyRenderMode(prerender: false))
@@ -7,14 +8,32 @@
 
 <h3>Lobby</h3>
 
+<input tabindex="playerName" placeholder="your name" />
+<input tabindex="roomName" placeholder="room name" />
+<button @onclick="CreateRoom">Get Rooms</button>
+
 @code {
     private HubConnection? hub;
+    private string playerName = string.Empty;
+    private string roomName = string.Empty;
+    private GameRoom? room;
+    private List<GameRoom> rooms = new();
 
     protected override async Task OnInitializedAsync()
     {
         hub = new HubConnectionBuilder().WithUrl(NavigationManager.ToAbsoluteUri("/gamehub"))
                                         .Build();
 
+        hub.On<List<GameRoom>>("Rooms", (rooms) => { Console.WriteLine($"{rooms.Count} rooms."); });
+
         await hub.StartAsync();
+    }
+
+    private async Task CreateRoom()
+    {
+        if (hub is not null)
+        {
+            room = await hub.InvokeAsync<GameRoom>("CreateRoom", roomName, playerName);
+        }
     }
 }
