--- a/dotnet/blazor/game/game/game.Client/Pages/Lobby.razor
+++ b/dotnet/blazor/game/game/game.Client/Pages/Lobby.razor
@@ -8,17 +8,26 @@
 
 <h3>Lobby</h3>
 
-<input @bind="playerName" placeholder="your name" />
-<input @bind="roomName" placeholder="room name" />
-<button @onclick="CreateRoom">Get Rooms</button>
+@if (room is null)
+{
+    <input @bind="playerName" placeholder="your name" />
+    <input @bind="roomName" placeholder="room name" />
+    <button @onclick="CreateRoom">Get Rooms</button>
 
-<h3>Rooms:</h3>
-<ul>
-    @foreach (GameRoom room in rooms)
-    {
-        <li>@room.Name <button @onclick="() => JoinRoom(room.ID)">join</button></li>
-    }
-</ul>
+    <h3>Rooms:</h3>
+    <ul>
+        @foreach (GameRoom room in rooms)
+        {
+            <li>@room.Name <button @onclick="() => JoinRoom(room.ID)">join</button></li>
+        }
+    </ul>
+}
+else
+{
+    <CascadingValue Value="hub">
+        <Room CurrentRoom="room"/>
+    </CascadingValue>
+}
 
 @code {
     private HubConnection? hub;
@@ -32,7 +41,11 @@
         hub = new HubConnectionBuilder().WithUrl(NavigationManager.ToAbsoluteUri("/gamehub"))
                                         .Build();
 
-        hub.On<List<GameRoom>>("Rooms", (rooms) => { this.rooms = rooms; });
+        hub.On<List<GameRoom>>("Rooms", (rooms) =>
+        {
+            this.rooms = rooms;
+            StateHasChanged();
+        });
 
         await hub.StartAsync();
     }
